feat: fetches complete pokemon details when clicked

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,23 @@
     /* @apply bg-[#FAFAFF] h-full; */
   }
 }
+
+/* styles.css */
+.hovered-text {
+  transform: translateY(-40px);
+  transition: transform 0.3s ease;
+}
+
+.card-container {
+  transition: transform 0.3s ease;
+}
+
+.card-container:hover {
+  transform: translateY(-5px);
+}
+
+@media (max-width: 640px) {
+  .hovered-text {
+    transform: translateY(0px);
+  }
+}
